Use classificaiton parameters for global name usage matching